added some steps to 'test_user_can_add_product_to_cart' Test-Case, test marked as flaky

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 addopts = -v -s --strict-markers
 markers =
-    positive: Positive test cases
-    negative: Negative test cases
-    flaky: Flaky test cases
+    positive: Positive tests
+    negative: Negative tests
+    flaky: Flaky tests
